# scotia-spending-agent

./: .env.example  .gitignore  DESIGN.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: sample_anonymized.csv
eval/: README.md  dataset.jsonl  runner.py
scripts/: ping_llm.py
src/scotia_agent/: agent.py  anonymize.py  categories.py  config.py  enrich.py  hybrid.py  llm_categorize.py  parser.py  tools.py
tests/: conftest.py  test_agent.py  test_anonymize.py  test_app.py  test_categories.py  test_hybrid.py  test_llm_categorize.py  test_parser.py  test_tools.py
